WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154243
Mouse cursor doesn't change when entering scrollbars
https://bugs.webkit.org/show_bug.cgi?id=154243
Summary
Mouse cursor doesn't change when entering scrollbars
Carlos Garcia Campos
Reported
2016-02-15 06:53:25 PST
If the scrollbar is over or very close to text or a link, when entering the scrollbar the cursor is not changed, keeping the beam or hand cursor when using the scrollbar. Same happens for image documents where the magnifier cursor is used and it remains when entering the scrollbars. We should use pointer cursor always for scrollbars.
Attachments
Patch
(2.23 KB, patch)
2016-02-15 06:55 PST
,
Carlos Garcia Campos
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-02-15 06:55:43 PST
Created
attachment 271341
[details]
Patch
Simon Fraser (smfr)
Comment 2
2016-02-15 08:42:46 PST
Comment on
attachment 271341
[details]
Patch Does this work correctly on Mac?
Carlos Garcia Campos
Comment 3
2016-02-15 08:45:47 PST
(In reply to
comment #2
)
> Comment on
attachment 271341
[details]
> Patch > > Does this work correctly on Mac?
I assume it does, I checked the problem was present in Safari, but I don't have a mac to test the patch there.
Carlos Garcia Campos
Comment 4
2016-02-16 01:45:48 PST
Committed
r196631
: <
http://trac.webkit.org/changeset/196631
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug